# email_management_openenv

./: Dockerfile  Dockerfile.txt  README.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
