[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-management-openenv"
version = "1.0.0"
description = "OpenEnv environment for email management tasks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"

[tool.uv]
dev-dependencies = []